--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,7 +15,7 @@
     rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/main.css" />
-
+  <meta name="google-site-verification" content="qUZypI5WVSZPIL8yzOOA8aRoFE2iOVO-YM1jy9_Pvac" />
 </head>
 
 <body>
